Data/Results/RQ2/null/folly/infer-analyze/report.txt
#0
/home/zhh/inject/null/folly/folly/io/async/test/TimeUtil.cpp:173: error: Dead Store
  The value written to &fd (type int) is never used.
  171.   }
  172. 
  173.   int fd = -1;
         ^
  174.   int *x = nullptr;
  175.   try {

#1
/home/zhh/inject/null/folly/folly/concurrency/CacheLocality.cpp:416: warning: Lock Consistency Violation
  Read/Write race. Non-private method `folly::SimpleAllocator::allocateHard` reads without synchronization from `this->mem_`. Potentially races with write in method `folly::SimpleAllocator::allocate`.
  414.   // Allocate a new slab.
  415.   mem_ = static_cast<uint8_t*>(folly::aligned_malloc(allocSize_, allocSize_));
  416.   if (!mem_) {
              ^
  417.     throw_exception<std::bad_alloc>();
  418.   }

Found 2 issues
                              Issue Type(ISSUED_TYPE_ID): #
  Lock Consistency Violation(LOCK_CONSISTENCY_VIOLATION): 1
                                  Dead Store(DEAD_STORE): 1
